--- a/themes/desafio-wp-gabriel/assets/sass/components/_carrossel.scss
+++ b/themes/desafio-wp-gabriel/assets/sass/components/_carrossel.scss
@@ -78,3 +78,14 @@
     margin-left: 20px;
   }
 }
+
+@media screen and (max-width:768px) {
+  .swiper-content {
+    .swiper-modify {
+      width: 100%;
+      a {
+        width: 100%;
+      }
+    }
+  }
+}
